sample/retrieveUnpackaged/objects/PortalSidebarItems__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pass_Parameters__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pass Parameters?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_VF_Page__c</fullName>
        <defaultValue>true</defaultValue>
        <label>VF Page?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Label__c</fullName>
        <label>Item Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_or_VF_Page__c</fullName>
        <inlineHelpText>either a link or VF Page Name, Without slash in the front and Without Parameters</inlineHelpText>
        <label>Link or VF Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visible_Account_Record_Types__c</fullName>
        <label>Visible Account Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_Profiles__c</fullName>
        <inlineHelpText>Comma seperated list
If blank, all profiles visible</inlineHelpText>
        <label>Visible Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This menu item is part of a wizard, hence no redirect will occur</inlineHelpText>
        <label>Wizard?</label>
        <type>Checkbox</type>
    </fields>
    <label>PortalSidebarItems</label>
</CustomObject>